# extension-catalog-model

./: .gitignore  README.md  autodocs.rst  conf.py  index.rst  qupath_extension_model.py  setup.cfg
.github/workflows/: build.yml  tests.yml
extension_catalog_model/: __init__.py  model.py
extension_index_model/: __init__.py  model.py
qupath_extension_model/: model.py
tests/: test_model.py
