[metadata]
name = qupath-extension-model
version = 0.1.0
author = "Alan O'Callaghan"
author_email = alan.ocallaghan@outlook.com
description = A pydantic model for specifying, reading and writing the QuPath extension specification.
license = Apache 2.0
classifiers =
    Programming Language :: Python :: 3

[options]
python_requires = >=3.10
install_requires =
    pydantic
