[metadata]
name = qupath_extension_model
version = 0.1.0
author = "Pete Bankhead, Alan O'Callaghan, Léo Leplat"
author_email = alan.ocallaghan@outlook.com
description = A pydantic model for specifying, reading and writing the QuPath extension specification.
license = Apache 2.0
classifiers =
    Programming Language :: Python :: 3

[options]
python_requires = >=3.10
install_requires =
    pydantic
packages = qupath_extension_model

[options.extras_require]
doc =
    sphinx ~= 7.4.5
    sphinx-rtd-theme ~= 2.0.0
