[metadata]
name = extension-index-model
version = 0.1.0
author = "Pete Bankhead, Alan O'Callaghan, Léo Leplat"
author_email = alan.ocallaghan@outlook.com
description = A pydantic model for specifying, reading and writing extension index files for use with the QuPath extension manager.
license = Apache 2.0
classifiers =
    Programming Language :: Python :: 3

[options]
python_requires = >=3.10
install_requires =
    pydantic ~= 2.10.0
packages = extension_index_model

[options.extras_require]
doc =
    sphinx ~= 7.4.5
    sphinx-rtd-theme ~= 2.0.0
dev =
    ipython
test =
    pytest ~= 8.2.2
    pytest-html ~= 4.1.1
    coverage ~= 7.6.5
    genbadge[all] ~= 1.1.1
